content/kapacitor/v0.1/tick/join_node.md
---
title: JoinNode
note: Auto generated by tickdoc

menu:
  kapacitor_01:
    name: Join
    identifier: join
    weight: 100
    parent: tick
---

Joins the data from any number of nodes. 
As each data point is received from a parent node it is paired 
with the next data points from the other parent nodes with a 
matching timestamp. Each parent node contributes at most one point 
to each joined point. A tolerance can be supplied to join points 
that do not have perfectly aligned timestamps. 
Any points that fall within the tolerance are joined on the timestamp. 
If multiple points fall within the same tolerance window than they are joined in the order 
they arrive. 

Aliases are used to prefix all fields from the respective nodes. 

The join can be an inner or outer join, see the [JoinNode.Fill](/docs/kapacitor/v0.1/tick/join_node.html#fill) property. 

Example: 


```javascript
    var errors = stream
                   .from().measurement('errors')
    var requests = stream
                   .from().measurement('requests')
    // Join the errors and requests streams
    errors.join(requests)
            // Provide prefix names for the fields of the data points.
            .as('errors', 'requests')
            // points that are within 1 second are considered the same time.
            .tolerance(1s)
            // fill missing values with 0, implies outer join.
            .fill(0.0)
            // name the resulting stream
            .streamName('error_rate')
        // Both the "value" fields from each parent have been prefixed
        // with the respective names 'errors' and 'requests'.
        .eval(lambda: "errors.value" / "requests.value"))
           .as('rate')
        ...
```

In the above example the `errors` and `requests` streams are joined 
and then transformed to calculate a combined field. 


Properties
----------

Property methods modify state on the calling node. They do not add another node to the pipeline, and always return a reference to the calling node.

### As

Prefix names for all fields from the respective nodes. 
Each field from the parent nodes will be prefixed with the provided name and a &#39;.&#39;. 
See the example above. 

The names cannot have a dot &#39;.&#39; character. 



```javascript
node.as(names ...string)
```


### Fill

Fill the data. 
The fill option implies the type of join: inner or full outer 
Options are: 

- none - (default) skip rows where a point is missing, inner join. 
- null - fill missing points with null, full outer join. 
- Any numerical value - fill fields with given value, full outer join. 


```javascript
node.fill(value interface{})
```


### StreamName

The name of this new joined data stream. 
If empty the name of the left parent is used. 


```javascript
node.streamName(value string)
```


### Tolerance

The maximum duration of time that two incoming points 
can be apart and still be considered to be equal in time. 
The joined data point&#39;s time will be rounded to the nearest 
multiple of the tolerance duration. 


```javascript
node.tolerance(value time.Duration)
```


Chaining Methods
----------------

Chaining methods create a new node in the pipeline as a child of the calling node. They do not modify the calling node.

### Alert

Create an alert node, which can trigger alerts. 


```javascript
node.alert()
```

Returns: [AlertNode](/docs/kapacitor/v0.1/tick/alert_node.html)


### Derivative

Create a new node that computes the derivative of adjacent points. 


```javascript
node.derivative(field string)
```

Returns: [DerivativeNode](/docs/kapacitor/v0.1/tick/derivative_node.html)


### Eval

Create an eval node that will evaluate the given transformation function to each data point. 
A list of expressions may be provided and will be evaluated in the order they are given 
and results of previous expressions are made available to later expressions. 


```javascript
node.eval(expressions ...tick.Node)
```

Returns: [EvalNode](/docs/kapacitor/v0.1/tick/eval_node.html)


### GroupBy

Group the data by a set of tags. 

Can pass literal * to group by all dimensions. 
Example: 


```javascript
    .groupBy(*)
```



```javascript
node.groupBy(tag ...interface{})
```

Returns: [GroupByNode](/docs/kapacitor/v0.1/tick/group_by_node.html)


### HttpOut

Create an http output node that caches the most recent data it has received. 
The cached data is available at the given endpoint. 
The endpoint is the relative path from the API endpoint of the running task. 
For example if the task endpoint is at &#34;/api/v1/task/&lt;task_name&gt;&#34; and endpoint is 
&#34;top10&#34;, then the data can be requested from &#34;/api/v1/task/&lt;task_name&gt;/top10&#34;. 


```javascript
node.httpOut(endpoint string)
```

Returns: [HTTPOutNode](/docs/kapacitor/v0.1/tick/http_out_node.html)


### InfluxDBOut

Create an influxdb output node that will store the incoming data into InfluxDB. 


```javascript
node.influxDBOut()
```

Returns: [InfluxDBOutNode](/docs/kapacitor/v0.1/tick/influx_d_b_out_node.html)


### Join

Join this node with other nodes. The data is joined on timestamp. 


```javascript
node.join(others ...Node)
```

Returns: [JoinNode](/docs/kapacitor/v0.1/tick/join_node.html)


### MapReduce

Perform a map-reduce operation on the data. 
The built-in functions under `influxql` provide the 
selection,aggregation, and transformation functions 
from the InfluxQL language. 

MapReduce may be applied to either a batch or a stream edge. 
In the case of a batch each batch is passed to the mapper idependently. 
In the case of a stream all incoming data points that have 
the exact same time are combined into a batch and sent to the mapper. 


```javascript
node.mapReduce(mr MapReduceInfo)
```

Returns: [ReduceNode](/docs/kapacitor/v0.1/tick/reduce_node.html)


### Sample

Create a new node that samples the incoming points or batches. 

One point will be emitted every count or duration specified. 


```javascript
node.sample(rate interface{})
```

Returns: [SampleNode](/docs/kapacitor/v0.1/tick/sample_node.html)


### Union

Perform the union of this node and all other given nodes. 


```javascript
node.union(node ...Node)
```

Returns: [UnionNode](/docs/kapacitor/v0.1/tick/union_node.html)


### Where

Create a new node that filters the data stream by a given expression. 


```javascript
node.where(expression tick.Node)
```

Returns: [WhereNode](/docs/kapacitor/v0.1/tick/where_node.html)


### Window

Create a new node that windows the stream by time. 

NOTE: Window can only be applied to stream edges. 


```javascript
node.window()
```

Returns: [WindowNode](/docs/kapacitor/v0.1/tick/window_node.html)

